--- a/meta/conf/local.conf.sample
+++ b/meta/conf/local.conf.sample
@@ -114,8 +114,9 @@ PACKAGE_CLASSES ?= "package_ipk"
 #                     e.g. ssh root access has a blank password
 # There are other application targets that can be used here too, see
 # meta/classes/image.bbclass and meta/classes/core-image.bbclass for more details.
-# We default to enabling the debugging tweaks.
-EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
+# We default to enabling the debugging tweaks unless an image is explicitly
+# requested to be built for production.
+EXTRA_IMAGE_FEATURES ?= "${@ '' if 'production' == d.getVar('IMAGE_MODE') else 'debug-tweaks'}"
 
 #
 # Additional image features
